# cv_inference_platform

./: .gitignore  app_spec.md  init.txt  prompt.md  start.sh
backend/: users.json
backend/app/: main.py
backend/cpp_engine/: CMakeLists.txt  inference_engine.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: RequireAuth.tsx
frontend/src/hooks/: useInferenceProgress.ts
frontend/src/pages/: InferencePage.tsx  Login.tsx  ResultsPage.tsx
